baml_language/crates/baml_lsp2_actions/src/snapshots/baml_lsp2_actions__listing_tests__list_package_items_multi_namespace.snap
---
source: crates/baml_lsp2_actions/src/listing_tests.rs
expression: listing
---
class            llm.Config                       models.baml:2
function         llm.LlmIdentity                  models.baml:7
class            lorem.Resume                     types.baml:2
class            Point                            types.baml:2
